--- a/.github/workflows/approve-test.yaml
+++ b/.github/workflows/approve-test.yaml
@@ -17,34 +17,35 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.HELIOS_INT_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.HELIOS_INT_AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: us-east-1
           
       - name: Configure AWS CLI
-        run: aws configure set default.region us-east-2
+        run: aws configure set default.region us-east-1
+
+      - name: Update terraform.tfvars with secrets
+        run: |
+          CONFIG_JSON="${{ secrets.SECRETS }}"
+          
+          echo "ElastiCacheSettings__HostAndPort = \"$(echo "$CONFIG_JSON" | jq -r '.ElastiCacheSettings__HostAndPort')\"" > terraform/terraform.tfvars
+          echo "ElastiCacheSettings__Ssl = \"$(echo "$CONFIG_JSON" | jq -r '.ElastiCacheSettings__Ssl')\"" >> terraform/terraform.tfvars
+          echo "ElastiCacheSettings__Password = \"$(echo "$CONFIG_JSON" | jq -r '.ElastiCacheSettings__Password')\"" >> terraform/terraform.tfvars
+          echo "ElastiCacheSettings__TransactionBatchSize = \"$(echo "$CONFIG_JSON" | jq -r '.ElastiCacheSettings__TransactionBatchSize')\"" >> terraform/terraform.tfvars
+          echo "SqsSettings__QueueName = \"$(echo "$CONFIG_JSON" | jq -r '.SqsSettings__QueueName')\"" >> terraform/terraform.tfvars
+          echo "SqsSettings__DeadLetterQueueName = \"$(echo "$CONFIG_JSON" | jq -r '.SqsSettings__DeadLetterQueueName')\"" >> terraform/terraform.tfvars
+          echo "SqsSettings__MaxNumberOfMessages = \"$(echo "$CONFIG_JSON" | jq -r '.SqsSettings__MaxNumberOfMessages')\"" >> terraform/terraform.tfvars
+          echo "SqsSettings__VisibilityTimeoutSeconds = \"$(echo "$CONFIG_JSON" | jq -r '.SqsSettings__VisibilityTimeoutSeconds')\"" >> terraform/terraform.tfvars
+          echo "SqsSettings__WaitTimeSeconds = \"$(echo "$CONFIG_JSON" | jq -r '.SqsSettings__WaitTimeSeconds')\"" >> terraform/terraform.tfvars
+          echo "SqsSettings__SleepingTimeSeconds = \"$(echo "$CONFIG_JSON" | jq -r '.SqsSettings__SleepingTimeSeconds')\"" >> terraform/terraform.tfvars
+          echo "TenantGroupSettings__TenantSettings__0__Name = \"$(echo "$CONFIG_JSON" | jq -r '.TenantGroupSettings__TenantSettings__0__Name')\"" >> terraform/terraform.tfvars
+          echo "TenantGroupSettings__TenantSettings__0__OdysseyApiBasePath = \"$(echo "$CONFIG_JSON" | jq -r '.TenantGroupSettings__TenantSettings__0__OdysseyApiBasePath')\"" >> terraform/terraform.tfvars
+          echo "TenantGroupSettings__TenantSettings__1__Name = \"$(echo "$CONFIG_JSON" | jq -r '.TenantGroupSettings__TenantSettings__1__Name')\"" >> terraform/terraform.tfvars
+          echo "TenantGroupSettings__TenantSettings__1__OdysseyApiBasePath = \"$(echo "$CONFIG_JSON" | jq -r '.TenantGroupSettings__TenantSettings__1__OdysseyApiBasePath')\"" >> terraform/terraform.tfvars
 
       - name: Terraform Init
         run: terraform init
-          
-  deploy:
-    runs-on: ubuntu-latest
-    needs: plan
-    if: success()
-    environment: Dev
-      
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.HELIOS_INT_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.HELIOS_INT_AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
-          
-      - name: Configure AWS CLI
-        run: aws configure set default.region us-east-2
+        working-directory: secrets
 
-      - name: Terraform Init
-        run: terraform init
-        
+      - name: Terraform plan
+        run : terraform plan  
+        working-directory: secrets
+          
