--- a/.github/workflows/approve-test.yaml
+++ b/.github/workflows/approve-test.yaml
@@ -27,8 +27,13 @@ jobs:
         working-directory: secrets
 
       - name: Terraform plan
-        run : terraform plan  
+        run : terraform plan -out=plan.tfplan
         working-directory: secrets
+      - name: Upload Plan
+        uses: actions/upload-artifact@v4
+        with:
+          name: terraform-plan
+          path: ./plan.tfplan   
 
   apply:
     needs: plan
@@ -60,4 +65,5 @@ jobs:
 
       - name: Terraform Apply
         run: terraform apply -auto-approve ./plan.tfplan
+        working-directory: secrets
         
