--- a/.github/workflows/approve-test.yaml
+++ b/.github/workflows/approve-test.yaml
@@ -13,14 +13,11 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.HELIOS_INT_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.HELIOS_INT_AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-          
-      - name: Configure AWS CLI
-        run: aws configure set default.region us-east-1
 
       - name: Terraform Init
         run: terraform init
@@ -29,11 +26,13 @@ jobs:
       - name: Terraform plan
         run : terraform plan -out=plan.tfplan
         working-directory: secrets
+
       - name: Upload Plan
         uses: actions/upload-artifact@v4
         with:
           name: terraform-plan
           path: ./plan.tfplan   
+        working-directory: secrets  
 
   apply:
     needs: plan
