--- a/.github/workflows/approve-test.yaml
+++ b/.github/workflows/approve-test.yaml
@@ -31,8 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: terraform-plan
-          path: ./plan.tfplan   
-        working-directory: secrets  
+          path: secrets/plan.tfplan   
 
   apply:
     needs: plan
